added more to listing page

--- a/listing.html
+++ b/listing.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Tripple B Listing</title>
+    <link rel="stylesheet" href="listing.css">
     <link rel="stylesheet" href="nav-styles.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="listing.css">
+
 
   </head>
   <body>
@@ -28,26 +29,40 @@
       <div class="detailsrow">
         <div class="priceinfocol">
           <h3>$****.**</h3>
+          <h4>Condition: _____</h4>
+          <p>The Description</p>
         </div>
+        <button type="buttonbuy">BUY</button>
         <div class="picturerow">
           <div class="productpicturecol">
-            <img src="placeholder.jpg" alt="placeholder"
+            <img src="placeholder.jpg" alt="p"
             width="50"
             height="50">
-            <img src="placeholder.jpg" alt="placeholder"
+            <img src="placeholder.jpg" alt="p"
             width="50"
             height="50">
-            <img src="placeholder.jpg" alt="placeholder"
+            <img src="placeholder.jpg" alt="p"
             width="50"
             height="50">
-            <img src="placeholder.jpg" alt="placeholder"
+            <img src="placeholder.jpg" alt="p"
             width="50"
             height="50">
           </div>
-          <img src="placeholder.jpg" alt="placeholder"
+          <img src="placeholder.jpg" alt="p"
           width="200"
           height="200">
         </div>
+        <div class="profilecol">
+          <div class="profilerow">
+            <h4>Seller:</h4>
+            <img src="profilepic.jpg" alt="pp" class="avatar">
+            <h3>SellerName</h3>
+        </div>
+        <button type="buttoncontact"
+        height="40"
+        width="60"
+        color="#084B8A"
+        >Contact</button>
       </div>
   </div>
 </body>
