--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="messages">
-      <a href="chat2.html">M</a>
+      <a href="Group_chat.php">M</a>
     </div>
 
     <footer>
