--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <nav>
       <div class ="container">
-        <a href="index.html" class="init">
+        <a href="index.php" class="init">
           <h1>Buy Borrow Books</h1>
           <ul class="nav-right">
-            <li><a href="browse.html"  class="underline">Browse</a></li>
-            <li><a href="listing.html"  class="underline">Listings</a></li>
-            <li><a href="profile.php"  class="underline">Profile</a></li>
+            <li><a href="browse.html"  class="item">Browse</a></li>
+            <li><a href="listing.html"  class="item">Listings</a></li>
+            <li><a href="profile.php"  class="item">Profile</a></li>
             <li><a href="login.html" class="action">Log In</a></li>
           </ul>
         </a>
@@ -25,75 +25,7 @@
 
     <!-- hero -->
     <div class="hero">
-        <h1>Welcome</h1>
-    </div>
-    <!-- First View -->
-    <div class="category-section">
-      <div class="mix-grid">
-        <div class="nested">
-          <h3>Genre 1</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="nested">
-          <h3>Genre 1</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="nested">
-          <h3>Genre 1</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- List sections -->
-
-    <div class="list-section">
-      <h2>Computer Science Books</h2>
-      <div class="scroller-grid">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-      </div>
-    </div>
-
-    <div class="list-section">
-      <h2>Chemistry Books</h2>
-      <div class="scroller-grid">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-      </div>
-    </div>
-
-    <div class="list-section">
-      <h2>Geology Books</h2>
-      <div class="scroller-grid">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-      </div>
-    </div>
-
-    <div class="messages">
-      <a href="Group_chat.php">M</a>
+        <h1>Error Not Connected to Database</h1>
     </div>
 
     <footer>
