--- a/listing.html
+++ b/listing.html
@@ -13,12 +13,12 @@
     <h1>Listing<h1>
   <nav>
     <div class ="container">
-      <a href="index.html" class="init">
+      <a href="index.php" class="init">
         <h1>Logo</h1>
         <ul class="nav-right">
           <li><a href="browse.html"  class="underline">Browse</a></li>
           <li><a href="listing.html"  class="underline">Listings</a></li>
-          <li><a href="profile.html"  class="underline">Profile</a></li>
+          <li><a href="profile.php"  class="underline">Profile</a></li>
           <li><a href="login.html" class="action">Log In</a></li>
         </ul>
       </a>
